log
Thu 14 Sep 2023 12:51:55 PM UTC: 
 tests:  1|8
total_score: 0/70
2e1c839
Thu 14 Sep 2023 01:02:12 PM UTC: 
 treemap.c | 10 ++++++++++
 1 file changed, 10 insertions(+)
 tests:  1|8
total_score: 0/70
26b6722
Thu 14 Sep 2023 01:02:25 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|7
total_score: 5/70
145b9b4
Thu 14 Sep 2023 01:14:26 PM UTC: 
 treemap.c | 13 +++++++++++++
 1 file changed, 13 insertions(+)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:60:13: error: variable ‘parent’ set but not used [-Werror=unused-but-set-variable]
   60 |   TreeNode *parent = NULL;
      |             ^~~~~~
treemap.c:57:13: error: unused variable ‘Nuevo’ [-Werror=unused-variable]
   57 |   TreeNode *Nuevo = (TreeNode*) malloc(sizeof(TreeNode));
      |             ^~~~~
cc1: all warnings being treated as errors
Compilation failed
bbfbe3a
Thu 14 Sep 2023 01:16:01 PM UTC: 
 treemap.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  4|7
total_score: 5/70
296abec
Thu 14 Sep 2023 01:19:25 PM UTC: 
 treemap.c | 11 +++++++++++
 1 file changed, 11 insertions(+)
 tests:  0|0
8e69da4
Thu 14 Sep 2023 01:19:54 PM UTC: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
5bf910b
Thu 14 Sep 2023 01:20:20 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|7
total_score: 5/70
2de1f14
Thu 14 Sep 2023 01:31:21 PM UTC: 
 treemap.c | 44 ++++++++++++++++----------------------------
 1 file changed, 16 insertions(+), 28 deletions(-)
 tests:  5|7
total_score: 5/70
a1f874c
Thu 14 Sep 2023 01:33:43 PM UTC: 
 treemap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:87:14: error: assignment to ‘TreeNode *’ from incompatible pointer type ‘Pair *’ [-Werror=incompatible-pointer-types]
   87 |       current=current->pair;
      |              ^
cc1: all warnings being treated as errors
Compilation failed
1553446
Thu 14 Sep 2023 01:34:11 PM UTC: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  5|7
total_score: 5/70
ffb9b0f
Thu 14 Sep 2023 01:44:56 PM UTC: 
 treemap.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  5|7
total_score: 5/70
c7d5928
Thu 14 Sep 2023 01:46:23 PM UTC: 
 treemap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  5|7
total_score: 5/70
224d935
Thu 14 Sep 2023 01:52:28 PM UTC: 
 treemap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  6|7
total_score: 5/70
1c07d77
Thu 14 Sep 2023 01:52:56 PM UTC: 
 treemap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  6|7
total_score: 5/70
1061413
Thu 14 Sep 2023 02:03:08 PM UTC: 
 treemap.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:90:17: error: ‘current’ may be used uninitialized in this function [-Werror=maybe-uninitialized]
   90 |   while(current != NULL){
      |                 ^
cc1: all warnings being treated as errors
Compilation failed
b88ea75
Thu 14 Sep 2023 02:03:35 PM UTC: 
 treemap.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  6|7
total_score: 5/70
616c261
Thu 14 Sep 2023 02:04:22 PM UTC: 
 treemap.c | 5 ++---
 1 file changed, 2 insertions(+), 3 deletions(-)
 tests:  6|7
total_score: 5/70
0b73432
Thu 14 Sep 2023 02:13:10 PM UTC: 
 treemap.c | 29 +++++++++++++++++++++++++++++
 1 file changed, 29 insertions(+)
 tests:  5|7
total_score: 5/70
09ddeba
Thu 14 Sep 2023 02:25:07 PM UTC: 
 treemap.c | 28 ----------------------------
 1 file changed, 28 deletions(-)
 tests:  6|7
total_score: 5/70
6b0f4a2
Thu 14 Sep 2023 02:34:11 PM UTC: 
 treemap.c | 22 ++--------------------
 1 file changed, 2 insertions(+), 20 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:84:39: error: ‘TreeNode’ has no member named ‘value’
   84 |   if (tree->root == NULL || tree->root->value == key){
      |                                       ^~
treemap.c:85:16: error: returning ‘TreeNode *’ from a function with incompatible return type ‘Pair *’ [-Werror=incompatible-pointer-types]
   85 |     return tree->root;
      |            ~~~~^~~~~~
cc1: all warnings being treated as errors
Compilation failed
6270d27
